--- a/pages/BanhMi.html
+++ b/pages/BanhMi.html
@@ -15,7 +15,8 @@
         <div class="row">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand yellowJ" href="#"> <img class="mobileBSLogo appearJ" src="../assets/bestSandwich logo.png" alt=""></a>
+                    <a class="navbar-brand yellowJ" href="#"> <img class="mobileBSLogo appearJ"
+                            src="../assets/bestSandwich logo.png" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -29,13 +30,13 @@
                                         <div class="accordion accordion-flush menuNavJ" id="accordionFlushExample">
                                             <div class="accordion-item"
                                                 style=" background-color: rgba(255, 255, 255, 0); outline: none;">
-                                                
-                                                    <button class="btn navLinksJ nav-link" type="button"
-                                                        data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
-                                                        aria-expanded="false" aria-controls="flush-collapseOne">
-                                                        <p class="yellowJ pB0" style="font-weight: 400;">Menu</p>
-                                                    </button>
-                                                
+
+                                                <button class="btn navLinksJ nav-link" type="button"
+                                                    data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
+                                                    aria-expanded="false" aria-controls="flush-collapseOne">
+                                                    <p class="yellowJ pB0" style="font-weight: 400;">Menu</p>
+                                                </button>
+
                                                 <div id="flush-collapseOne" class="accordion-collapse collapse"
                                                     data-bs-parent="#accordionFlushExample">
                                                     <div class="accordion-body blackBg"><a
@@ -75,21 +76,24 @@
     <div class="container-fluid bgWhiteJ" style="margin-top: -5px">
         <div class="row banhMiPaddingJ">
             <div class="col-12 col-md-6 centerJ">
-                <img class="chefJ" src="../assets/banh mi in ellipse.png" alt="Picture of Banh Mi"/>
+                <img class="chefJ" src="../assets/banh mi in ellipse.png" alt="Picture of Banh Mi" />
             </div>
             <div class="col">
                 <h2 class="abrilFatfaceJ aLittleAboutJ" style="padding-top: 50px">
                     What’s a Banh Mi?
                 </h2>
-                <p class="sansCollectionJ aLittleAboutJ2" >
-                    You may be wondering what a banh mi is? Well a banh mi is basically
-                    a short baguette with a very nice crisp crust and soft texture, but
-                    Vietnamese style. The sandwich is usually split in half and filled
-                    with savory ingredients. A banh mi usually consists of a fusion of
-                    meats and vegetables from native Vietnamese cuisine. For example cha
-                    lua which is Vietnamese sausage, cilantro, cucumber , pickled
-                    carrots, pickled daikon, red chilli and mayonnaise.
-                </p>
+                <div class="aLittleAboutJ2Div centerJ">
+                    <p class="sansCollectionJ aLittleAboutJ2">
+                        You may be wondering what a banh mi is? Well a banh mi is basically
+                        a short baguette with a very nice crisp crust and soft texture, but
+                        Vietnamese style. The sandwich is usually split in half and filled
+                        with savory ingredients. A banh mi usually consists of a fusion of
+                        meats and vegetables from native Vietnamese cuisine. For example cha
+                        lua which is Vietnamese sausage, cilantro, cucumber , pickled
+                        carrots, pickled daikon, red chilli and mayonnaise.
+                    </p>
+                </div>
+
             </div>
         </div>
     </div>
