--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand yellowJ" href="#"> <img class="mobileBSLogo appearJ" src="../assets/bestSandwich logo.png" alt=""></a>
+                    <a class="navbar-brand yellowJ" href="./index.html"> <img class="mobileBSLogo appearJ" src="../assets/bestSandwich logo.png" alt="Picture of Logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -59,7 +59,7 @@
 
                                 <div class="col-1 centerJ disappearJ">
                                     <a href="./index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png"
-                                            alt=""></a>
+                                            alt="Picture of Logo"></a>
                                 </div>
                                 <div class="col yugiJ alignCenterJ disappearJ">
                                     <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches &
@@ -99,7 +99,7 @@
         <div class="row disappearJ">
             <div class="col-4 ">
                 <div class="row centerJ">
-                    <img class="infoLogoSizeJ" src="./assets/open-sign.png" alt="">
+                    <img class="infoLogoSizeJ" src="./assets/open-sign.png" alt="Picture of an open sign">
                 </div>
                 <div class="row txtCenterJ abrilFatfaceJ" style="padding-top: 30px">
                     <h3 class="infoTxtSizeJ">OPEN HOURS</h3>
@@ -113,7 +113,7 @@
 
             </div>
             <div class="col-4">
-                <div class="row centerJ"><img class="infoLogoSizeJ2" src="./assets/location.png" alt="">
+                <div class="row centerJ"><img class="infoLogoSizeJ2" src="./assets/location.png" alt="Picture of location pin">
                 </div>
                 <div class="row txtCenterJ abrilFatfaceJ" style="padding-top: 30px">
                     <h3 class="infoTxtSizeJ">LOCATION</h3>
@@ -133,7 +133,7 @@
             </div>
             <div class="col-4">
                 <div class="row centerJ">
-                    <img class="infoLogoSizeJ imgCoverJ" src="./assets/contact-mail.png" alt="">
+                    <img class="infoLogoSizeJ imgCoverJ" src="./assets/contact-mail.png" alt="Picture of mail icon">
                 </div>
                 <div class="row txtCenterJ abrilFatfaceJ" style="padding-top: 30px">
                     <h3 class="infoTxtSizeJ">CONTACT</h3>
@@ -170,80 +170,80 @@
         <div class="row evenJ homePageMargin disappearJ">
             <div class="col">
                 <div class="card cardJ" style="width: 280px;">
-                    <img src="./assets/banhMiCard1.png" class="card-img-top" alt="...">
+                    <img src="./assets/banhMiCard1.png" class="card-img-top" alt="Picture of Grilled PorkBanh Mi">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span
                                 class="sandwichJ">Grilled Pork</span> $5.79</p>
                         <div class="row starRowJ">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card cardJ" style="width: 280px;">
-                    <img src="./assets/banhMiCard2.png" class="card-img-top" alt="...">
+                    <img src="./assets/banhMiCard2.png" class="card-img-top" alt="Picture of Vegetarian Banh Mi">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Diet Friendly <span
                                 class="sandwichJ">Vegetarian</span> $5.79</p>
                         <div class="row starRowJ">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card cardJ" style="width: 280px;">
-                    <img src="./assets/BanhMiCard3.png" class="card-img-top" alt="...">
+                    <img src="./assets/BanhMiCard3.png" class="card-img-top" alt="Picture of BBQ Pork Banh Mi">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span
-                                class="sandwichJ">Grilled Pork</span> $5.79</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">Top Seller <span
+                                class="sandwichJ">BBQ Pork</span> $5.79</p>
                         <div class="row starRowJ">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card cardJ" style="width: 280px;">
-                    <img src="./assets/banhMiCard4.png" class="card-img-top" alt="...">
+                    <img src="./assets/banhMiCard4.png" class="card-img-top" alt="Picture of Ham and Cheese Croissant">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span
-                                class="sandwichJ">Grilled Pork</span> $5.79</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Croissant <span
+                                class="sandwichJ">H & C Croissant</span> $6.49</p>
                         <div class="row starRowJ">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card cardJ" style="width: 280px;">
-                    <img src="./assets/banhMiCard5.png" class="card-img-top" alt="...">
+                    <img src="./assets/banhMiCard5.png" class="card-img-top" alt="Picture of Ham and Cheese Baguette">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span
-                                class="sandwichJ">Grilled Pork</span> $5.79</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Baguette <span
+                                class="sandwichJ">H & C Baguette</span> $6.19</p>
                         <div class="row starRowJ">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
-                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                            <img class="star2J" src="./assets/Star.png" alt="Picture of star">
                         </div>
                     </div>
                 </div>
