--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -15,8 +15,7 @@
         <div class="row">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand yellowJ" href="#"> <img class="mobileBSLogo appearJ"
-                            src="../assets/bestSandwich logo.png" alt=""></a>
+                    <a class="navbar-brand yellowJ" href="../index.html"> <img class="mobileBSLogo appearJ" src="../assets/bestSandwich logo.png" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -30,23 +29,21 @@
                                         <div class="accordion accordion-flush menuNavJ" id="accordionFlushExample">
                                             <div class="accordion-item"
                                                 style=" background-color: rgba(255, 255, 255, 0); outline: none;">
-
-                                                <button class="btn navLinksJ nav-link" type="button"
-                                                    data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
-                                                    aria-expanded="false" aria-controls="flush-collapseOne">
-                                                    <p class="yellowJ pB0" style="font-weight: 400;">Menu</p>
-                                                </button>
-
+                                                
+                                                    <button class="btn navLinksJ nav-link" type="button"
+                                                        data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
+                                                        aria-expanded="false" aria-controls="flush-collapseOne">
+                                                        <p class="yellowJ pB0" style="font-weight: 400;">Menu</p>
+                                                    </button>
+                                                
                                                 <div id="flush-collapseOne" class="accordion-collapse collapse"
                                                     data-bs-parent="#accordionFlushExample">
                                                     <div class="accordion-body blackBg"><a
                                                             class="nav-link navLinksJ yellowJ"
-                                                            href="./Menu.html">Food</a>
-                                                        </div>
+                                                            href="./Menu.html">Food</a></div>
                                                     <div class="accordion-body blackBg"><a
                                                             class="nav-link navLinksJ yellowJ"
-                                                            href="./Drinks.html">Drinks</a>
-                                                        </div>
+                                                            href="./Drinks.html">Drinks</a></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -75,12 +72,12 @@
         </div>
     </div>
 
-    <video autoplay loop class="videoJ" src="../assets/pexels-marygrace-caneba-5452068 (2160p).mp4"></video>
+    <video autoplay loop class="videoJ disappearJ" src="../assets/pexels-marygrace-caneba-5452068 (2160p).mp4"></video>
 
     <h1 class="absoluteJ whiteJ behindTheCounterJ sansCollectionJ">Behind The Counter</h1>
 
 
-    <div class="container-fluid bgWhiteJ" style="margin-top: -5px">
+    <div class="container-fluid bgWhiteJ abUsMargin">
         <div class="row banhMiPaddingJ">
             <div class="col-12 col-md-6 centerJ">
                 <img class="chefJ" src="../assets/Chef.png" alt="Picture of Chef" />
