--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -15,7 +15,7 @@
         <div class="row">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand yellowJ" href="#"> <img class="mobileBSLogo appearJ" src="../assets/bestSandwich logo.png" alt=""></a>
+                    <a class="navbar-brand yellowJ" href="../index.html"> <img class="mobileBSLogo appearJ" src="../assets/bestSandwich logo.png" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
