--- a/pages/Drinks.html
+++ b/pages/Drinks.html
@@ -12,8 +12,8 @@
 
 <body>
 
-    <!-- NavBar -->
-    <div class="container-fluid">
+  <!-- NavBar -->
+  <div class="container-fluid">
     <div class="row">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -55,7 +55,7 @@
         </div>
       </nav>
     </div>
-</div>
+  </div>
 
   <div class="container-fluid pageMargin">
     <div class="row">
@@ -63,70 +63,73 @@
         <p>Top Sellers</p>
       </div>
     </div>
-
-    <div class="row bgWhite">
-      <div class="col topFive">
-        <div class="card " style="width: 12rem; border: 0px;">
-          <img src="../assssssssssssssssssssssssets/Taro.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+    <div class="d-none d-lg-block">
+      <div class="row bgWhite">
+        <div class="col topFive">
+          <div class="card " style="width: 12rem; border: 0px;">
+            <img src="../assssssssssssssssssssssssets/Taro.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col topFive">
-        <div class="card" style="width: 12rem; border: 0px;">
-          <img src="../assssssssssssssssssssssssets/GreenTea.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+        <div class="col topFive">
+          <div class="card" style="width: 12rem; border: 0px;">
+            <img src="../assssssssssssssssssssssssets/GreenTea.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col topFive">
-        <div class="card" style="width: 12rem; border: 0px;">
-          <img src="../assssssssssssssssssssssssets/ThaiTea.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+        <div class="col topFive">
+          <div class="card" style="width: 12rem; border: 0px;">
+            <img src="../assssssssssssssssssssssssets/ThaiTea.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col topFive">
-        <div class="card" style="width: 12rem; border: 0px;">
-          <img src="../assssssssssssssssssssssssets/Avocado.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+        <div class="col topFive">
+          <div class="card" style="width: 12rem; border: 0px;">
+            <img src="../assssssssssssssssssssssssets/Avocado.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col topFive">
-        <div class="card" style="width: 12rem; border: 0px;">
-          <img src="../assssssssssssssssssssssssets/HoneyDew.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+        <div class="col topFive">
+          <div class="card" style="width: 12rem; border: 0px;">
+            <img src="../assssssssssssssssssssssssets/HoneyDew.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
           </div>
         </div>
       </div>
 
     </div>
-
+    <div class="row d-sm-block d-md-none">
+      <div class="col g-0">
+        <img src="../assssssssssssssssssssssssets/mobile1.jpg" style="width: 100%; height: 100%;" alt="">
+      </div>
+    </div>
     <div class="row">
       <div class="headBox">
         <p>Menu</p>
       </div>
     </div>
 
-    <!-- Drinks Menu -->
 
-    <br>
-    <br>
+    <!-- Drinks Menu -->
     <div class="row">
       <div class="col g-0">
         <div class="line"></div>
@@ -142,17 +145,14 @@
           <p>Passion Fruit Jelly</p>
         </div>
       </div>
-      <div class="col drinkPos g-0">
-        <div style="padding-top: 75px;">
+      <div class="col drinkPos g-0 d-none d-lg-block">
+        <div style="padding-top: 110px;">
           <img class="drinkImage" src="../assssssssssssssssssssssssets/boba.jpg"
             style="float: right;width:652px;height:482px; object-fit: cover;" alt="">
         </div>
 
       </div>
     </div>
-
-    <br>
-    <br>
 
     <div class="row">
       <div class="col g-0">
@@ -163,24 +163,22 @@
           <p>Iced Milk Tea</p>
           <p>Iced Thai Tea</p>
           <p>Iced Green Tea</p>
+          <p>Iced Coconut Juice</p>
           <p>Iced Green Milk Tea</p>
         </div>
       </div>
-      <div class="col drinkPos g-0">
-        <div style="padding-top: 91px;">
-        <img class="drinkImage" src="../assssssssssssssssssssssssets/drink2.jpg"
-          style="float: right;width:652px;height:378px; object-fit: cover" alt="">
+      <div class="col drinkPos g-0 d-none d-lg-block">
+        <div style="padding-top: 92px;">
+          <img class="drinkImage" src="../assssssssssssssssssssssssets/drink2.jpg"
+            style="float: right;width:652px;height:378px; object-fit: cover" alt="">
         </div>
       </div>
     </div>
 
-    <br>
-    <br>
-
     <div class="row">
       <div class="col g-0">
         <div class="line"></div>
-        <div class="menuText">Specialty Drinks<span class="specialText">$5.69</span></div>        
+        <div class="menuText">Specialty Drinks<span class="specialText">$5.69</span></div>
         <div class="line"></div>
         <div class="drinkText">
           <p>Iced Taro Milk Tea</p>
@@ -191,16 +189,13 @@
         </div>
       </div>
 
-      <div class="col drinkPos g-0">
-        <div style="padding-top: 107px;">
-        <img class="drinkImage" src="../assssssssssssssssssssssssets/drink3.jpg"
-          style="float: right;width:652px;height:361px; object-fit: cover" alt="">
+      <div class="col drinkPos g-0 d-none d-lg-block">
+        <div style="padding-top: 116px;">
+          <img class="drinkImage" src="../assssssssssssssssssssssssets/drink3.jpg"
+            style="float: right;width:652px;height:361px; object-fit: cover" alt="">
         </div>
       </div>
     </div>
-
-    <br>
-    <br>
 
     <div class="row">
       <div class="col g-0">
@@ -218,16 +213,14 @@
           <p>Dreamy Strawberry Banana</p>
         </div>
       </div>
-      <div class="col drinkPos g-0">
-        <div style="padding-top: 50px;">
-        <img class="drinkImage" src="../assssssssssssssssssssssssets/drink4.jpg"
-          style="float: right;width:652px;height:545px; object-fit: cover" alt="">
+      <div class="col drinkPos g-0 d-none d-lg-block">
+        <div style="padding-top: 112px;">
+          <img class="drinkImage" src="../assssssssssssssssssssssssets/drink4.jpg"
+            style="float: right;width:652px;height:545px; object-fit: cover" alt="">
         </div>
       </div>
     </div>
 
-    <br>
-    <br>
 
     <div class="row">
       <div class="col g-0">
@@ -244,21 +237,18 @@
           <p>Green Tea Gangbusters</p>
         </div>
       </div>
-      <div class="col drinkPos g-0">
-        <div style="padding-top: 42px;">
-        <img class="drinkImage" src="../assssssssssssssssssssssssets/drink5.png"
-          style="float: right;width:652px;height:532px; object-fit: cover; object-position: 0px -210px ;" alt="">
+      <div class="col drinkPos g-0 d-none d-lg-block">
+        <div style="padding-top: 76px;">
+          <img class="drinkImage" src="../assssssssssssssssssssssssets/drink5.png"
+            style="float: right;width:652px;height:532px; object-fit: cover; object-position: 0px -210px ;" alt="">
         </div>
       </div>
     </div>
 
-    <br>
-    <br>
-
-
     <!-- Yelp Review -->
 
-    <div id="carouselExample" class="carousel slide bgWhiteJ">
+
+    <div id="carouselExample" class="carousel slide bgWhiteJ d-none d-lg-block">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="row centerJ">
@@ -371,60 +361,60 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-</div>
+  </div>
 
 
 
-    <!-- Footer -->
+  <!-- Footer -->
 
-    <hr class="yellowJ hrLineJ mt-4">
+  <hr class="yellowJ hrLineJ mt-4">
 
-    <div class="container-fluid footerPaddingJ">
-      <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
-        <div class="col-4" style="padding-left: 3%;">
-          <div class="row yellowJ abrilFatfaceJ">
-            <h2 class="footerFontSize3">Best Sandwiches</h2>
-          </div>
-          <div class="row yellowJ abrilFatfaceJ">
-            <h2 class="footerFontSize3">& Smoothies</h2>
-          </div>
+  <div class="container-fluid footerPaddingJ">
+    <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
+      <div class="col-4" style="padding-left: 3%;">
+        <div class="row yellowJ abrilFatfaceJ">
+          <h2 class="footerFontSize3">Best Sandwiches</h2>
         </div>
-        <div class="col" style="padding-left: 2%;">
-          <div class="row">
-            <div class="col">
-              <div class="row">
-                <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
-                <p class="yellowJ footerFontSize ">Mon & Tue : 9 am - 5 pm</p>
-                <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
-                <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
-              </div>
+        <div class="row yellowJ abrilFatfaceJ">
+          <h2 class="footerFontSize3">& Smoothies</h2>
+        </div>
+      </div>
+      <div class="col" style="padding-left: 2%;">
+        <div class="row">
+          <div class="col">
+            <div class="row">
+              <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
+              <p class="yellowJ footerFontSize ">Mon & Tue : 9 am - 5 pm</p>
+              <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
+              <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
             </div>
+          </div>
 
-            <div class="col">
-              <div class="row">
-                <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
-                <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
-                <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
-                <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
-              </div>
+          <div class="col">
+            <div class="row">
+              <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
+              <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
+              <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
+              <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
             </div>
+          </div>
 
-            <div class="col">
-              <div class="row">
-                <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
-              </div>
-              <div class="row">
-                <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
-                    class="img-fluid" src="../assets/FACEBOOK.png" alt=""></a>
-                <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
-                    class="img-fluid" src="../assets/icons8-yelp-100.png" alt=""></a>
-                <a class="footerIconsJ"><img class="img-fluid" src="../assets/bestSandwich logo.png" alt=""></a>
-              </div>
+          <div class="col">
+            <div class="row">
+              <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
+            </div>
+            <div class="row">
+              <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
+                  class="img-fluid" src="../assets/FACEBOOK.png" alt=""></a>
+              <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
+                  class="img-fluid" src="../assets/icons8-yelp-100.png" alt=""></a>
+              <a class="footerIconsJ"><img class="img-fluid" src="../assets/bestSandwich logo.png" alt=""></a>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
 
 
@@ -461,7 +451,7 @@
 
 
 
-  
+
 
 
 
